# desktop-m3g

./: CHANGES  CMakeLists.txt  DesktopM3GAPIReference.md  LICENSE  ProjectHome.md  README  README.android  README.linux
build-android-ndk/: README.android-ndk
doc/api/: Doxyfile.en  Doxyfile.ja  Makefile
doc/conference/: Ruby会議2010-Desktop-M3Gとは.odp  Ruby会議2010-M3Gとは.odp  Ruby会議2010.odp  Ruy会議2010-Desktop-M3Gとは.odp  Ruy会議2010-Ruby-M3G.odp
doc/tutorial/: 00-Preface.tex  01-Introduction.tex  01-Introduction.tex2  02-RenderingOfScene.tex  02-RenderingOfScene.tex2  03-01-Light.tex  03-02-Background.tex  03-03-Camera.tex  03-04-Fog.tex  03-05-Material.tex  03-06-PolygonMode.tex  03-07-CompositingMode.tex  03-08-Texture.tex  03-09-Sprite3D.tex  03-10-Image2D.tex  03-11-Appearance.tex  03-12-Mesh.tex  03-13-SkinnedMesh.tex  03-14-MorhpingMesh.tex  03-15-KeyframeSequence.tex  03-16-AnimationTrack.tex  03-17-AnimationController.tex  03-18-Loader.tex  03-19-RayIntersetion.tex  03-20-Object3D.tex  03-21-Transformable.tex  03-22-Node.tex  03-23-Group.tex  03-24-Transform.tex  03-25-VertexArray.tex  03-26-VertexBuffer.tex  03-27-IndexBuffer.tex  03-28-Graphics3D.tex  03-28-TriangleStripArray.tex  03-29-World.tex  03-30-Loader.tex  04-Animation.tex  (+7 more)
exlib/: CMakeLists.txt
exlib/jpeg-helper/: CMakeLists.txt
exlib/jpeg-helper/src/: CMakeLists.txt  jpeg_memory_src.cpp  jpeg_memory_src.hpp
exlib/m3g-reader-writer/: CMakeLists.txt
exlib/m3g-reader-writer/sample/sample-01/: Makefile  main.cpp
exlib/m3g-reader-writer/src/: CMakeLists.txt  M3GReader.cpp  M3GReader.hpp  M3GWriter.cpp  Makefile  OutMemoryStream.cpp
exlib/m3g-reader-writer/test/: Makefile  id-only.hex  in-memory-stream.hex  main.cpp  test-AnimationController.cpp  test-AnimationTrack.cpp  test-Appearance.cpp  test-Background.cpp  test-Camera.cpp  test-CompositingMode.cpp  test-ExternalReference.cpp  test-Fog.cpp  test-Group.cpp  test-Header.cpp  test-Image2D.cpp  test-InMemoryStream.cpp  test-KeyframeSequence.cpp  test-Light.cpp  test-M3GReader.cpp  test-M3GWriter.cpp  test-Material.cpp  test-Mesh.cpp  test-MorphingMesh.cpp  test-Node.cpp  test-Object3D.cpp  test-OutMemoryStream.cpp  test-PolygonMode.cpp  test-Section.cpp  test-SkinnedMesh.cpp  test-Sprite3D.cpp  test-Texture2D.cpp  test-Transformable.cpp  test-TriangleStripArray.cpp  test-VertexArray.cpp  test-VertexBuffer.cpp  test-World.cpp
exlib/png-helper/: CMakeLists.txt
exlib/png-helper/src/: CMakeLists.txt
sample/sample-08-skinned-mesh/: CMakeLists.txt  data.hpp  main.cpp
sample/test-08-qt-cubic/: CMakeLists.txt  Makefile  MyWidget.cpp  MyWidget.hpp  main.cpp  test-08-qt-cubic.pro
src/: ActiveInterval.hpp  Android.mk  AnimationController.cpp  AnimationController.hpp  AnimationTrack.cpp  AnimationTrack.hpp  Appearance.cpp  Appearance.hpp  Application.mk  Background.cpp  Background.hpp  Bone.cpp  Bone.hpp  BoneIndex.hpp  BoneWeight.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CompositingMode.cpp  CompositingMode.hpp  Config.hpp.in  Crop.hpp  Exception.cpp  Exception.hpp  Fog.cpp  Fog.hpp  Graphics.hpp  Graphics3D.cpp  Graphics3D.hpp  Group.cpp  Group.hpp  Image2D.cpp  Image2D.hpp  ImageMode.hpp  InMemoryStream.cpp  InMemoryStream.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Intersect.cpp  Intersect.hpp  (+82 more)
src/parser/: M3GParser.cpp  M3GParser.hpp  Makefile  Section.cpp  Section.hpp  adler32.hpp  parse-AnimationController.cpp  parse-AnimationController.hpp  parse-AnimationTrack.hpp  parse-AnimationTracker.cpp  parse-Appearance.cpp  parse-Appearance.hpp  parse-Background.cpp  parse-Background.hpp  parse-Camera.cpp  parse-Camera.hpp  parse-CompositingMode.cpp  parse-CompositingMode.hpp  parse-Fog.cpp  parse-Group.cpp  parse-Group.hpp  parse-Image2D.cpp  parse-Image2D.hpp  parse-IndexBuffer.cpp  parse-IndexBuffer.hpp  parse-KeyframeSequence.cpp  parse-KeyframeSequence.hpp  parse-Light.cpp  parse-Light.hpp  parse-Material.cpp  parse-Material.hpp  parse-Mesh.cpp  parse-Mesh.hpp  parse-MorphingMesh.cpp  parse-Node.cpp  parse-Node.hpp  parse-Object3D.cpp  parse-Object3D.hpp  parse-PolygonMode.cpp  parse-PolygonMode.hpp  (+17 more)
src/parser/test/: Makefile  Makefile.bak  boy.m3g  main.cpp  untitled.m3g
src/ruby-m3g/: Makefile  extconf.rb  ruby-AnimationController.cpp  ruby-AnimationTrack.cpp  ruby-Appearance.cpp  ruby-Background.cpp  ruby-Camera.cpp  ruby-CompositingMode.cpp  ruby-Exception.cpp  ruby-Fog.cpp  ruby-Graphics3D.cpp  ruby-Group.cpp  ruby-Image2D.cpp  ruby-ImageMode.cpp  ruby-IndexBuffer.cpp  ruby-KeyframeSequence.cpp  ruby-Light.cpp  ruby-Loader.cpp  ruby-Material.cpp  ruby-Mesh.cpp  ruby-MorphingMesh.cpp  ruby-Node.cpp  ruby-Object3D.cpp  ruby-PolygonMode.cpp  ruby-RayIntersection.cpp  ruby-SkinnedMesh.cpp  ruby-Sprite3D.cpp  ruby-Texture2D.cpp  ruby-Transform.cpp  ruby-Transformable.cpp  ruby-TriangleStripArray.cpp  ruby-VertexArray.cpp  ruby-VertexBuffer.cpp  ruby-Viewport.cpp  ruby-World.cpp  ruby-m3g.cpp  ruby-m3g.hpp
src/ruby-m3g-old/: ruby-ActiveInterval.cpp  ruby-Camera.cpp  ruby-CompositingMode.cpp  ruby-Crop.cpp  ruby-Fog.cpp  ruby-Group.cpp  ruby-Light.cpp  ruby-Mesh.cpp  ruby-Object3D.cpp  ruby-PolygonMode.cpp  ruby-Projection.cpp  ruby-Sprite3D.cpp  ruby-TextureCoord2D.cpp  ruby-Transform.cpp  ruby-TriangleStripArray.cpp  ruby-World.cpp  ruby-m3g.cpp  ruby-m3g.hpp
test/: CMakeLists.txt  Makefile  Makefile.bak  test-AnimationController.cpp  test-AnimationTrack.cpp  test-Appearance.cpp  test-Background.cpp  test-Bone.cpp  test-Camera.cpp  test-CompositingMode.cpp  test-Exception.cpp  test-Fog.cpp  test-Group.cpp  test-Image2D.cpp  test-IndexBuffer.cpp  test-Intersect.cpp  test-Keyframe.cpp  test-KeyframeSequence.cpp  test-Light.cpp  test-Loader.cpp  test-Material.cpp  test-Matrix.cpp  test-MemoryReader.cpp  test-Mesh.cpp  test-MorphingMesh.cpp  test-Node.cpp  test-Object.cpp  test-Object3D.cpp  test-PolygonMode.cpp  test-Property.cpp  test-Quaternion.cpp  test-RayIntersect.cpp  test-RayIntersection.cpp  test-SkinnedMesh.cpp  test-Skinning.cpp  test-Sprite3D.cpp  test-Texture2D.cpp  test-Transform.cpp  test-Transformable.cpp  test-TriangleStripArray.cpp  (+10 more)
(+1155 files in other folders)
